# homework10.1_02

./: .env_semple  README.md  main.py  mylog.txt  pyproject.toml
data/: operations.json
src/: decorators.py  external_api.py  generators.py  logger_logging.py  masks.py  processing.py  read_csv_xlsx.py  search.py  utils.py  widget.py
tests/: conftest.py  main.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_read_csv_xlsx.py  test_utils.py  test_widget.py
